--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer.Android/packages.config
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer.Android/packages.config
@@ -98,12 +98,18 @@
   <package id="Xamarin.Android.Support.v7.Palette" version="25.4.0.2" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.v7.RecyclerView" version="25.4.0.2" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Vector.Drawable" version="25.4.0.2" targetFramework="monoandroid71" />
+  <package id="Xamarin.Build.Download" version="0.4.2" targetFramework="monoandroid70" />
   <package id="Xamarin.FFImageLoading" version="2.2.25" targetFramework="monoandroid71" />
   <package id="Xamarin.FFImageLoading.Forms" version="2.2.25" targetFramework="monoandroid71" />
   <package id="Xamarin.FFImageLoading.Svg" version="2.2.25" targetFramework="monoandroid71" />
   <package id="Xamarin.FFImageLoading.Svg.Forms" version="2.2.25" targetFramework="monoandroid71" />
   <package id="Xamarin.FFImageLoading.Transformations" version="2.2.25" targetFramework="monoandroid71" />
   <package id="Xamarin.Forms" version="2.5.0.121934" targetFramework="monoandroid70" />
+  <package id="Xamarin.Forms.Maps" version="2.5.0.121934" targetFramework="monoandroid70" />
+  <package id="Xamarin.GooglePlayServices.Base" version="42.1021.1" targetFramework="monoandroid70" />
+  <package id="Xamarin.GooglePlayServices.Basement" version="42.1021.1" targetFramework="monoandroid70" />
+  <package id="Xamarin.GooglePlayServices.Maps" version="42.1021.1" targetFramework="monoandroid70" />
+  <package id="Xamarin.GooglePlayServices.Tasks" version="42.1021.1" targetFramework="monoandroid70" />
   <package id="XLabs.Core" version="2.0.5782" targetFramework="monoandroid70" />
   <package id="XLabs.Forms" version="2.0.5782" targetFramework="monoandroid70" />
   <package id="XLabs.IoC" version="2.0.5782" targetFramework="monoandroid70" />
