--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer.Android/Properties/AndroidManifest.xml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer.Android/Properties/AndroidManifest.xml
@@ -7,14 +7,15 @@
 	<uses-permission android:name="android.permission.WAKE_LOCK" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-	<application android:label="@string/app_name" android:icon="@drawable/thumbs_up">
-		<provider android:name="android.support.v4.content.FileProvider" 
-              android:authorities="com.companyname.MSO.AppStimmer.fileprovider" 
-              android:exported="false" android:grantUriPermissions="true">
-		  <meta-data android:name="android.support.FILE_PROVIDER_PATHS"
-		             android:resource="@xml/file_paths">
-        
-      </meta-data>
-    </provider>
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+	<uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
+	<uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<application android:label="@string/app_name" android:icon="@drawable/splash_logo">
+		<provider android:name="android.support.v4.content.FileProvider" android:authorities="com.companyname.MSO.AppStimmer.fileprovider" android:exported="false" android:grantUriPermissions="true">
+			<meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="AIzaSyA_MUP847i71AlbItICsglJGi-QNF04Ckw" />
+			<meta-data android:name="android.support.FILE_PROVIDER_PATHS" android:resource="@xml/file_paths"></meta-data>
+		</provider>
 	</application>
 </manifest>
