--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/packages.config
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/packages.config
@@ -34,6 +34,7 @@
   <package id="Xamarin.FFImageLoading.Svg.Forms" version="2.2.25" targetFramework="portable46-net451+win81" />
   <package id="Xamarin.FFImageLoading.Transformations" version="2.2.25" targetFramework="portable46-net451+win81" />
   <package id="Xamarin.Forms" version="2.5.0.121934" targetFramework="portable46-net451+win81" />
+  <package id="Xamarin.Forms.Maps" version="2.5.0.121934" targetFramework="portable46-net451+win81" />
   <package id="XLabs.Core" version="2.0.5782" targetFramework="portable46-net451+win81" />
   <package id="XLabs.Forms" version="2.0.5782" targetFramework="portable46-net451+win81" />
   <package id="XLabs.IoC" version="2.0.5782" targetFramework="portable46-net451+win81" />
