--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer.Android/packages.config
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer.Android/packages.config
@@ -78,10 +78,12 @@
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="monoandroid71" />
+  <package id="TK.CustomMap" version="2.0.0-pre3" targetFramework="monoandroid70" />
   <package id="VG.XFShapeView" version="1.0.5" targetFramework="monoandroid71" />
   <package id="Xam.Plugin.Media" version="3.0.1" targetFramework="monoandroid70" />
   <package id="Xam.Plugins.Forms.DeviceOrientation" version="1.0.1" targetFramework="monoandroid70" />
   <package id="Xam.Plugins.Settings" version="3.1.1" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Maps.Utils" version="0.5.0" targetFramework="monoandroid70" />
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="25.4.0.2" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Annotations" version="25.4.0.2" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Compat" version="25.4.0.2" targetFramework="monoandroid71" />
@@ -105,10 +107,11 @@
   <package id="Xamarin.FFImageLoading.Svg.Forms" version="2.2.25" targetFramework="monoandroid71" />
   <package id="Xamarin.FFImageLoading.Transformations" version="2.2.25" targetFramework="monoandroid71" />
   <package id="Xamarin.Forms" version="2.5.0.121934" targetFramework="monoandroid70" />
-  <package id="Xamarin.Forms.Maps" version="2.5.0.121934" targetFramework="monoandroid70" />
   <package id="Xamarin.GooglePlayServices.Base" version="42.1021.1" targetFramework="monoandroid70" />
   <package id="Xamarin.GooglePlayServices.Basement" version="42.1021.1" targetFramework="monoandroid70" />
+  <package id="Xamarin.GooglePlayServices.Location" version="42.1021.1" targetFramework="monoandroid70" />
   <package id="Xamarin.GooglePlayServices.Maps" version="42.1021.1" targetFramework="monoandroid70" />
+  <package id="Xamarin.GooglePlayServices.Places" version="42.1021.1" targetFramework="monoandroid70" />
   <package id="Xamarin.GooglePlayServices.Tasks" version="42.1021.1" targetFramework="monoandroid70" />
   <package id="XLabs.Core" version="2.0.5782" targetFramework="monoandroid70" />
   <package id="XLabs.Forms" version="2.0.5782" targetFramework="monoandroid70" />
