--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/packages.config
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/packages.config
@@ -5,12 +5,19 @@
   <package id="akavache.sqlite3" version="5.0.0" targetFramework="portable46-net451+win81" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="portable46-net451+win81" />
   <package id="ExifLib.PCL" version="1.0.1" targetFramework="portable46-net451+win81" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="portable46-net451+win81" />
+  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="portable46-net451+win81" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="portable46-net451+win81" />
+  <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="portable46-net451+win81" />
+  <package id="Microsoft.NETCore.Targets" version="1.1.0" targetFramework="portable46-net451+win81" />
   <package id="MvvmLight" version="5.3.0.0" targetFramework="portable46-net451+win81" />
   <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="portable46-net451+win81" />
+  <package id="NETStandard.Library" version="1.6.1" targetFramework="portable46-net451+win81" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="portable46-net451+win81" />
   <package id="Plugin.MediaManager" version="0.4.5" targetFramework="portable46-net451+win81" />
   <package id="Plugin.MediaManager.Forms" version="0.4.5" targetFramework="portable46-net451+win81" />
   <package id="Rg.Plugins.Popup" version="1.0.4" targetFramework="portable46-net451+win81" />
+  <package id="runtime.native.System" version="4.3.0" targetFramework="portable46-net451+win81" />
   <package id="Rx-Core" version="2.2.5" targetFramework="portable46-net451+win81" />
   <package id="Rx-Interfaces" version="2.2.5" targetFramework="portable46-net451+win81" />
   <package id="Rx-Linq" version="2.2.5" targetFramework="portable46-net451+win81" />
@@ -24,6 +31,37 @@
   <package id="Syncfusion.Xamarin.DataSource" version="15.4.0.20" targetFramework="portable46-net451+win81" />
   <package id="Syncfusion.Xamarin.GridCommon" version="15.4.0.20" targetFramework="portable46-net451+win81" />
   <package id="Syncfusion.Xamarin.SfListView" version="15.4.0.20" targetFramework="portable46-net451+win81" />
+  <package id="System.Collections" version="4.3.0" targetFramework="portable46-net451+win81" />
+  <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="portable46-net451+win81" />
+  <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="portable46-net451+win81" />
+  <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="portable46-net451+win81" />
+  <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="portable46-net451+win81" />
+  <package id="System.Globalization" version="4.3.0" targetFramework="portable46-net451+win81" />
+  <package id="System.IO" version="4.3.0" targetFramework="portable46-net451+win81" />
+  <package id="System.IO.Compression" version="4.3.0" targetFramework="portable46-net451+win81" />
+  <package id="System.Linq" version="4.3.0" targetFramework="portable46-net451+win81" />
+  <package id="System.Linq.Expressions" version="4.3.0" targetFramework="portable46-net451+win81" />
+  <package id="System.Net.Http" version="4.3.0" targetFramework="portable46-net451+win81" />
+  <package id="System.Net.Primitives" version="4.3.0" targetFramework="portable46-net451+win81" />
+  <package id="System.ObjectModel" version="4.3.0" targetFramework="portable46-net451+win81" />
+  <package id="System.Reflection" version="4.3.0" targetFramework="portable46-net451+win81" />
+  <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="portable46-net451+win81" />
+  <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="portable46-net451+win81" />
+  <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="portable46-net451+win81" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="portable46-net451+win81" />
+  <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="portable46-net451+win81" />
+  <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="portable46-net451+win81" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="portable46-net451+win81" />
+  <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="portable46-net451+win81" />
+  <package id="System.Text.Encoding" version="4.3.0" targetFramework="portable46-net451+win81" />
+  <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="portable46-net451+win81" />
+  <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="portable46-net451+win81" />
+  <package id="System.Threading" version="4.3.0" targetFramework="portable46-net451+win81" />
+  <package id="System.Threading.Tasks" version="4.3.0" targetFramework="portable46-net451+win81" />
+  <package id="System.Threading.Timer" version="4.3.0" targetFramework="portable46-net451+win81" />
+  <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="portable46-net451+win81" />
+  <package id="System.Xml.XDocument" version="4.3.0" targetFramework="portable46-net451+win81" />
+  <package id="TK.CustomMap" version="2.0.0-pre3" targetFramework="portable46-net451+win81" />
   <package id="VG.XFShapeView" version="1.0.5" targetFramework="portable46-net451+win81" />
   <package id="Xam.Plugin.Media" version="3.0.1" targetFramework="portable46-net451+win81" />
   <package id="Xam.Plugins.Forms.DeviceOrientation" version="1.0.1" targetFramework="portable46-net451+win81" />
@@ -34,7 +72,6 @@
   <package id="Xamarin.FFImageLoading.Svg.Forms" version="2.2.25" targetFramework="portable46-net451+win81" />
   <package id="Xamarin.FFImageLoading.Transformations" version="2.2.25" targetFramework="portable46-net451+win81" />
   <package id="Xamarin.Forms" version="2.5.0.121934" targetFramework="portable46-net451+win81" />
-  <package id="Xamarin.Forms.Maps" version="2.5.0.121934" targetFramework="portable46-net451+win81" />
   <package id="XLabs.Core" version="2.0.5782" targetFramework="portable46-net451+win81" />
   <package id="XLabs.Forms" version="2.0.5782" targetFramework="portable46-net451+win81" />
   <package id="XLabs.IoC" version="2.0.5782" targetFramework="portable46-net451+win81" />
