--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer.Android/Properties/AndroidManifest.xml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer.Android/Properties/AndroidManifest.xml
@@ -12,11 +12,10 @@
 	<uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
 	<uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-	<application android:label="@string/app_name" android:icon="@drawable/splash_logo">
-	  <meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="AIzaSyA_MUP847i71AlbItICsglJGi-QNF04Ckw" />
-    
+	<application android:label="@string/app_name" android:icon="@drawable/splashscreen_small">
+		<meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="AIzaSyA_MUP847i71AlbItICsglJGi-QNF04Ckw" />
 		<provider android:name="android.support.v4.content.FileProvider" android:authorities="com.companyname.MSO.AppStimmer.fileprovider" android:exported="false" android:grantUriPermissions="true">
-      <meta-data android:name="android.support.FILE_PROVIDER_PATHS" android:resource="@xml/file_paths"></meta-data>
+			<meta-data android:name="android.support.FILE_PROVIDER_PATHS" android:resource="@xml/file_paths"></meta-data>
 		</provider>
 	</application>
 </manifest>
