--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/MSO.StimmApp.csproj
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/MSO.StimmApp.csproj
@@ -130,6 +130,9 @@
     <Compile Include="Views\ContentViews\AppStimmerEditor\Attachments\AudioAttachmentView.xaml.cs">
       <DependentUpon>AudioAttachmentView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\ContentViews\AppStimmerEditor\Attachments\LocationAttachmentView.xaml.cs">
+      <DependentUpon>LocationAttachmentView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\ContentViews\AppStimmerEditor\Attachments\VideoAttachmentView.xaml.cs">
       <DependentUpon>VideoAttachmentView.xaml</DependentUpon>
     </Compile>
@@ -742,6 +745,15 @@
     <EmbeddedResource Include="Resources\Images\Appstimmer3_1.png" />
     <EmbeddedResource Include="Resources\Images\Appstimmer4.png" />
     <EmbeddedResource Include="Resources\Images\Appstimmer5.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Views\ContentViews\AppStimmerEditor\Attachments\LocationAttachmentView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\Images\Google_maps.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\..\packages\Xamarin.Forms.2.5.0.121934\build\portable-win+net45+wp80+win81+wpa81\Xamarin.Forms.targets" Condition="Exists('..\..\packages\Xamarin.Forms.2.5.0.121934\build\portable-win+net45+wp80+win81+wpa81\Xamarin.Forms.targets')" />
