--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/MSO.StimmApp.csproj
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/MSO.StimmApp.csproj
@@ -114,6 +114,7 @@
     <Compile Include="ViewModels\EditAppStimmerDescriptionViewModel.cs" />
     <Compile Include="ViewModels\EditAppStimmerTextViewModel.cs" />
     <Compile Include="ViewModels\ImageAttachmentViewModel.cs" />
+    <Compile Include="ViewModels\MapAttachmentViewModel.cs" />
     <Compile Include="ViewModels\MenuPageMasterViewModel.cs" />
     <Compile Include="ViewModels\PictureAttachmentPreviewViewModel.cs" />
     <Compile Include="ViewModels\SettingsViewModel.cs" />
@@ -128,6 +129,9 @@
     </Compile>
     <Compile Include="Views\ContentViews\AppStimmerEditor\Attachments\AudioAttachmentView.xaml.cs">
       <DependentUpon>AudioAttachmentView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\ContentViews\AppStimmerEditor\Attachments\LocationAttachmentView.xaml.cs">
+      <DependentUpon>LocationAttachmentView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\ContentViews\AppStimmerEditor\Attachments\VideoAttachmentView.xaml.cs">
       <DependentUpon>VideoAttachmentView.xaml</DependentUpon>
@@ -164,6 +168,9 @@
     </Compile>
     <Compile Include="Views\ContentViews\AppStimmerEditor\AppStimmerEditorOverviewView.xaml.cs">
       <DependentUpon>AppStimmerEditorOverviewView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\ContentViews\AppStimmerEditor\Attachments\View1.xaml.cs">
+      <DependentUpon>View1.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\ContentViews\AppStimmers\AppStimmersListView.xaml.cs">
       <DependentUpon>AppStimmersListView.xaml</DependentUpon>
@@ -210,6 +217,9 @@
     </Compile>
     <Compile Include="Views\Pages\MapsContentPage.xaml.cs">
       <DependentUpon>MapsContentPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Pages\Page1.xaml.cs">
+      <DependentUpon>Page1.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\Pages\PictureAttachmentPreviewPage.xaml.cs">
       <DependentUpon>PictureAttachmentPreviewPage.xaml</DependentUpon>
@@ -744,6 +754,22 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\Images\placeholder.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Views\Pages\Page1.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\ContentViews\AppStimmerEditor\Attachments\View1.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Views\ContentViews\AppStimmerEditor\Attachments\LocationAttachmentView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\..\packages\Xamarin.Forms.2.5.0.121934\build\portable-win+net45+wp80+win81+wpa81\Xamarin.Forms.targets" Condition="Exists('..\..\packages\Xamarin.Forms.2.5.0.121934\build\portable-win+net45+wp80+win81+wpa81\Xamarin.Forms.targets')" />
