--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/packages.config
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/packages.config
@@ -63,6 +63,7 @@
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="portable46-net451+win81" />
   <package id="TK.CustomMap" version="2.0.0-pre3" targetFramework="portable46-net451+win81" />
   <package id="VG.XFShapeView" version="1.0.5" targetFramework="portable46-net451+win81" />
+  <package id="Xam.Plugin.Geolocator" version="4.2.0" targetFramework="portable46-net451+win81" />
   <package id="Xam.Plugin.Media" version="3.0.1" targetFramework="portable46-net451+win81" />
   <package id="Xam.Plugins.Forms.DeviceOrientation" version="1.0.1" targetFramework="portable46-net451+win81" />
   <package id="Xam.Plugins.Settings" version="3.1.1" targetFramework="portable46-net451+win81" />
