--- a/src/MSO.AppStimmer/MSO.AppStimmer.Core/packages.config
+++ b/src/MSO.AppStimmer/MSO.AppStimmer.Core/packages.config
@@ -14,5 +14,6 @@
   <package id="Splat" version="1.6.0" targetFramework="portable46-net451+win81" />
   <package id="SQLitePCLRaw.bundle_e_sqlite3" version="1.1.0" targetFramework="portable46-net451+win81" />
   <package id="SQLitePCLRaw.core" version="1.1.0" targetFramework="portable46-net451+win81" />
+  <package id="Xam.Plugin.Geolocator" version="4.2.0" targetFramework="portable46-net451+win81" />
   <package id="Xam.Plugins.Settings" version="3.1.1" targetFramework="portable46-net451+win81" />
 </packages>
