--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer.Android/packages.config
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer.Android/packages.config
@@ -15,7 +15,7 @@
   <package id="Plugin.CurrentActivity" version="1.0.1" targetFramework="monoandroid70" />
   <package id="Plugin.MediaManager" version="0.4.5" targetFramework="monoandroid70" />
   <package id="Plugin.MediaManager.Forms" version="0.4.5" targetFramework="monoandroid70" />
-  <package id="Plugin.Permissions" version="2.0.1" targetFramework="monoandroid70" />
+  <package id="Plugin.Permissions" version="2.2.1" targetFramework="monoandroid70" />
   <package id="Rg.Plugins.Popup" version="1.0.4" targetFramework="monoandroid70" />
   <package id="Rx-Core" version="2.2.5" targetFramework="monoandroid71" />
   <package id="Rx-Interfaces" version="2.2.5" targetFramework="monoandroid71" />
@@ -80,6 +80,7 @@
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="monoandroid71" />
   <package id="TK.CustomMap" version="2.0.0-pre3" targetFramework="monoandroid70" />
   <package id="VG.XFShapeView" version="1.0.5" targetFramework="monoandroid71" />
+  <package id="Xam.Plugin.Geolocator" version="4.2.0" targetFramework="monoandroid70" />
   <package id="Xam.Plugin.Media" version="3.0.1" targetFramework="monoandroid70" />
   <package id="Xam.Plugins.Forms.DeviceOrientation" version="1.0.1" targetFramework="monoandroid70" />
   <package id="Xam.Plugins.Settings" version="3.1.1" targetFramework="monoandroid71" />
