--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer.iOS/packages.config
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer.iOS/packages.config
@@ -14,6 +14,7 @@
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="xamarinios10" />
   <package id="Plugin.MediaManager" version="0.4.5" targetFramework="xamarinios10" />
   <package id="Plugin.MediaManager.Forms" version="0.4.5" targetFramework="xamarinios10" />
+  <package id="Plugin.Permissions" version="2.2.1" targetFramework="xamarinios10" />
   <package id="Rg.Plugins.Popup" version="1.0.4" targetFramework="xamarinios10" />
   <package id="Rx-Core" version="2.2.5" targetFramework="xamarinios10" />
   <package id="Rx-Interfaces" version="2.2.5" targetFramework="xamarinios10" />
@@ -78,6 +79,7 @@
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="xamarinios10" />
   <package id="VG.XFShapeView" version="1.0.5" targetFramework="xamarinios10" />
   <package id="WebP.Touch" version="1.0.4" targetFramework="xamarinios10" />
+  <package id="Xam.Plugin.Geolocator" version="4.2.0" targetFramework="xamarinios10" />
   <package id="Xam.Plugin.Media" version="3.0.1" targetFramework="xamarinios10" />
   <package id="Xam.Plugins.Forms.DeviceOrientation" version="1.0.1" targetFramework="xamarinios10" />
   <package id="Xam.Plugins.Settings" version="3.1.1" targetFramework="xamarinios10" />
