--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer.Android/MSO.StimmApp.Android.csproj
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer.Android/MSO.StimmApp.Android.csproj
@@ -213,6 +213,9 @@
     <Reference Include="TK.CustomMap.Android, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\TK.CustomMap.2.0.0-pre3\lib\MonoAndroid10\TK.CustomMap.Android.dll</HintPath>
     </Reference>
+    <Reference Include="Xamanimation, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Xamanimation.1.1.0\lib\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamanimation.dll</HintPath>
+    </Reference>
     <Reference Include="Xamarin.Android.Support.Animated.Vector.Drawable, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Xamarin.Android.Support.Animated.Vector.Drawable.25.4.0.2\lib\MonoAndroid70\Xamarin.Android.Support.Animated.Vector.Drawable.dll</HintPath>
     </Reference>
@@ -330,6 +333,7 @@
     <Compile Include="MainApplication.cs" />
     <Compile Include="Renderers\BottomlineColoredExpandableEditorRenderer.cs" />
     <Compile Include="Renderers\BottomlinelessEntryRenderer.cs" />
+    <Compile Include="Renderers\ImprovedNavigationBarRenderer.cs" />
     <Compile Include="Renderers\MyMapRenderer.cs" />
     <Compile Include="Renderers\Scrollbardisabledrenderer.cs" />
     <Compile Include="Renderers\VideoPlaybackSliderRenderer.cs" />
