--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer.Android/packages.config
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer.Android/packages.config
@@ -84,6 +84,7 @@
   <package id="Xam.Plugin.Media" version="3.0.1" targetFramework="monoandroid70" />
   <package id="Xam.Plugins.Forms.DeviceOrientation" version="1.0.1" targetFramework="monoandroid70" />
   <package id="Xam.Plugins.Settings" version="3.1.1" targetFramework="monoandroid71" />
+  <package id="Xamanimation" version="1.1.0" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Maps.Utils" version="0.5.0" targetFramework="monoandroid70" />
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="25.4.0.2" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Annotations" version="25.4.0.2" targetFramework="monoandroid71" />
