--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/packages.config
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/packages.config
@@ -67,6 +67,7 @@
   <package id="Xam.Plugin.Media" version="3.0.1" targetFramework="portable46-net451+win81" />
   <package id="Xam.Plugins.Forms.DeviceOrientation" version="1.0.1" targetFramework="portable46-net451+win81" />
   <package id="Xam.Plugins.Settings" version="3.1.1" targetFramework="portable46-net451+win81" />
+  <package id="Xamanimation" version="1.1.0" targetFramework="portable46-net451+win81" />
   <package id="Xamarin.FFImageLoading" version="2.2.25" targetFramework="portable46-net451+win81" />
   <package id="Xamarin.FFImageLoading.Forms" version="2.2.25" targetFramework="portable46-net451+win81" />
   <package id="Xamarin.FFImageLoading.Svg" version="2.2.25" targetFramework="portable46-net451+win81" />
