Added toast for  AppStimmer creation

--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/MSO.StimmApp.csproj
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/MSO.StimmApp.csproj
@@ -113,6 +113,7 @@
     <Compile Include="Services\Animator.cs" />
     <Compile Include="Services\INavigationService.cs" />
     <Compile Include="Services\ISoftwareKeyboardService.cs" />
+    <Compile Include="Services\IToastService.cs" />
     <Compile Include="Services\SoftwareKeyboardEventArgs.cs" />
     <Compile Include="Services\SoftwareKeyboardEventHandler.cs" />
     <Compile Include="Services\SoftwareKeyboardServiceBase.cs" />
