--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer.Android/MSO.StimmApp.Android.csproj
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer.Android/MSO.StimmApp.Android.csproj
@@ -346,6 +346,7 @@
     <Compile Include="Renderers\MyScrollViewRenderer.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Resources\ToastService.cs" />
     <Compile Include="SplashActivity.cs" />
     <Compile Include="Resources\SoftwareKeyboardService.cs" />
     <Compile Include="XFormsAppCompatDroid.cs" />
